# ESP32S3GNSS

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/peripherals/: CMakeLists.txt  gps_uart.c  gps_uart.h  i2c_sensors.c  i2c_sensors.h  idf_component.yml  lcd_display.c  lcd_display.h
drivers/: gps_uart.c  gps_uart.h  i2c_sensors.c  i2c_sensors.h  lcd_display.c  lcd_display.h
include/: hardware_config.h  platform_defs.h
main/: CMakeLists.txt  hardware_config.h  main.c
ref/: qmc6309.c  qmc6309.h
tools/: build.sh
